src/main/java/com/example/demo/__core/errors/Ex400.java
package com.example.demo.__core.errors;

public class Ex400 extends RuntimeException{
	public Ex400(String msg) {
		super(msg);
	}
}

